--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
         <script type="module" src="awesomeScript.js" defer></script>
     </head>
     <body>
@@ -67,4 +67,5 @@
         <h1 class="Result" id="RankingResult"></h1>
         <h3 id="CreditText">Made by <i><strong>Ty Habermehl</strong></i></h3>
     </body>
+
 </html>
